--- a/PMSCRM/appsettings.json
+++ b/PMSCRM/appsettings.json
@@ -1,12 +1,12 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Data Source=!!!JOHAN\\SQLEXPRESS;Initial Catalog=PMSCRM;Trusted_Connection=True;Encrypt=False;"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LAPTOP-7E43HMCL;Initial Catalog=PMSCRM;Trusted_Connection=True;Encrypt=False;"
+  }
 }
