--- a/PMSCRM/appsettings.json
+++ b/PMSCRM/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-7E43HMCL;Initial Catalog=PMSCRM;Trusted_Connection=True;Encrypt=False;"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=JOHAN\\SQLEXPRESS;Initial Catalog=PMSCRM;Trusted_Connection=True;Encrypt=False;"
+    }
 }
