--- a/PMSCRM/appsettings.json
+++ b/PMSCRM/appsettings.json
@@ -1,12 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=JOHAN\\SQLEXPRESS;Initial Catalog=PMSCRM;Trusted_Connection=True;Encrypt=False;"
+    },
+
+    "EmailSettings": {
+        "SmtpServer": "smtp.outlook.com",
+        "SmtpPort": 587,
+        "SenderEmail": "",
+        "SenderPassword": ""
     }
+
 }
