--- a/PMSCRM/appsettings.json
+++ b/PMSCRM/appsettings.json
@@ -6,14 +6,14 @@
         }
     },
     "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-7E43HMCL;Initial Catalog=PMSCRM;Trusted_Connection=True;Encrypt=False;"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=JOHAN\\SQLEXPRESS;Initial Catalog=PMSCRM;Trusted_Connection=True;Encrypt=False;"
+    },
 
     "EmailSettings": {
-        "SmtpServer": "smtp.outlook.com",
+        "SmtpServer": "smtp.gmail.com",
         "SmtpPort": 587,
-        "SenderEmail": "",
-        "SenderPassword": ""
+        "SenderEmail": "pmscrmsender@gmail.com",
+        "SenderPassword": "ahck fjbr aorw seeu"
     }
 }
