User och Admin role login

--- a/PMSCRM/appsettings.json
+++ b/PMSCRM/appsettings.json
@@ -10,10 +10,10 @@
     "DefaultConnection": "Data Source=LAPTOP-7E43HMCL;Initial Catalog=PMSCRM;Trusted_Connection=True;Encrypt=False;"
   },
 
-    "EmailSettings": {
-        "SmtpServer": "smtp.gmail.com",
-        "SmtpPort": 587,
-        "SenderEmail": "pmscrmsender@gmail.com",
-        "SenderPassword": "ahck fjbr aorw seeu"
-    }
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderEmail": "pmscrmsender@gmail.com",
+    "SenderPassword": "nhzn ujne iobd sveg"
+  }
 }
